# charmline

./: .gitignore  Cargo.toml
builds/001/static/: chat.html  index.html  settings.html  smnconsole.js
builds/002/cfg/: config.json
builds/002/cfg/bots/: instructions_sales_bkp.txt
builds/002/static/: chat.html  style.css
builds/003/cfg/bots/: instructions_sales_bkp.txt  instructions_summary.txt
builds/003/static/: chat.js  dev.html  settings.html
cfg/: config.json
cfg/bots/: instructions_sales.txt  instructions_summary.txt  msg_introduction.txt
collects/: collect_20251008_145615.clt  collect_20251008_151013.clt  collect_20251008_233710.clt  collect_20251009_154759.clt
src/: main.rs  sys_resource.rs
src/sys_bot/: bot_handlers.rs  bot_instructions.rs  bot_openai.rs  bot_reply.rs  mod.rs
src/sys_console/: console_handlers.rs  mod.rs
src/sys_core/: core_config.rs  core_responses.rs  core_routing.rs  core_server.rs  mod.rs
src/sys_dashboard/: dashboard_handlers.rs  mod.rs
src/sys_db/: db_session_dashboard.rs  db_sessions.rs  mod.rs
src/sys_session/: mod.rs  session_handlers.rs  session_routing.rs  session_state.rs
static/: chat.html  dashboard.js  index.html  logs.html  notes.md  settings.html  style.css  styleManager.js  style_chat.css  tempindex.css
static/graphics/: icon-mic.png~
static/pages/: chat.html  dev.html  logs.html  preview.html  settings.html
static/scripts/: dashboard.js  preview.js
static/style/: style.css  style_preview.css
tools/: build_and_run.py  collect.py  install_service.sh  update.sh
