[package]
name = "charmline"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4"] }
